--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,68 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>AseanTravel</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <%= csrf_meta_tags %>
+	<title>AseanTravel</title>
+	<%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+	<%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+	<%= csrf_meta_tags %>
+	
+	<link href="assets/vendor/bootstrap.min.css" rel="stylesheet">
+   <link href="assets/flat-ui.css" rel="stylesheet">
+   <link rel="shortcut icon" href="img/favicon.ico">
+   
+   <script src="assets/vendor/video.js"></script>
+	<script src="assets/flat-ui.js"></script>
 </head>
-<body>
 
-<%= yield %>
+<body>
+	<div class="header">
+		  <div class="navbar navbar navbar-inverse navbar-embossed navbar-static-top" role="navigation">
+        <div class="container">
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+              <span class="sr-only">Toggle navigation</span>
+            </button>
+            <a class="navbar-brand" href="#">Flat UI</a>
+          </div>
+          <div class="navbar-collapse collapse">
+            <ul class="nav navbar-nav">
+              <li class="active"><a href="#">Home</a></li>
+              <li><a href="#about">About</a></li>
+              <li><a href="#contact">Contact</a></li>
+              <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
+                <ul class="dropdown-menu">
+                  <li><a href="#">Action</a></li>
+                  <li><a href="#">Another action</a></li>
+                  <li><a href="#">Something else here</a></li>
+                  <li class="divider"></li>
+                  <li class="dropdown-header">Nav header</li>
+                  <li><a href="#">Separated link</a></li>
+                  <li><a href="#">One more separated link</a></li>
+                </ul>
+              </li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+              <li><a href="../navbar/">Default</a></li>
+              <li class="active"><a href="./">Static top</a></li>
+              <li><a href="../navbar-fixed-top/">Fixed top</a></li>
+            </ul>
+          </div><!--/.nav-collapse -->
+        </div>
+      </div>
+	</div>
+<div class="container">
+
+	<div class="row">
+		<div class="col-sm-10 col-sm-offset-1">
+			<%= yield %>
+		</div>
+	</div>
+
+	<div class="footer" style="width: 100%">
+		<h2>Footer</h2>
+	</div>
+</div>
 
 </body>
 </html>
