--- a/app/assets/stylesheets/asean.scss
+++ b/app/assets/stylesheets/asean.scss
@@ -3,6 +3,6 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 .header{
 	a{
-		text-decoration: none !important;
+		// text-decoration: none !important;
 	}
 }
