--- a/app/views/asean/index.html.erb
+++ b/app/views/asean/index.html.erb
@@ -1,3 +1,90 @@
 
 <h1>Asean#index</h1>
 <p>Find me in app/views/asean/index.html.erb</p>
+
+	<table class="table table-striped">
+      <thead>
+        <tr>
+          <th>#</th>
+          <th>First Name</th>
+          <th>Last Name</th>
+          <th>Username</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <th scope="row">1</th>
+          <td>Mark</td>
+          <td>Otto</td>
+          <td>@mdo</td>
+        </tr>
+        <tr>
+          <th scope="row">2</th>
+          <td>Jacob</td>
+          <td>Thornton</td>
+          <td>@fat</td>
+        </tr>
+        <tr>
+          <th scope="row">3</th>
+          <td>Larry</td>
+          <td>the Bird</td>
+          <td>@twitter</td>
+        </tr>
+      </tbody>
+   </table>
+
+
+    <div class="bs-example" data-example-id="basic-forms">
+    <form>
+      <div class="form-group">
+        <label for="exampleInputEmail1">Email address</label>
+        <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter email">
+      </div>
+      <div class="form-group">
+        <label for="exampleInputPassword1">Password</label>
+        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+      </div>
+      <div class="form-group">
+        <label for="exampleInputFile">File input</label>
+        <input type="file" id="exampleInputFile">
+        <p class="help-block">Example block-level help text here.</p>
+      </div>
+      <div class="checkbox">
+        <label>
+          <input type="checkbox"> Check me out
+        </label>
+      </div>
+      <button type="submit" class="btn btn-default">Submit</button>
+    </form>
+  </div>
+
+  <div>
+  	
+  </div>
+
+   <div class="row pbl">
+        <div class="col-md-2">
+          <input type="checkbox" checked data-toggle="switch" id="custom-switch-01" />
+        </div>
+        <div class="col-md-2">
+          <input type="checkbox" data-toggle="switch" id="custom-switch-02" />
+        </div>
+        <div class="col-md-2">
+          <div class="bootstrap-switch-square">
+            <input type="checkbox" checked data-toggle="switch" id="custom-switch-03" data-on-text="<span class='fui-check'></span>" data-off-text="<span class='fui-cross'></span>" />
+          </div>
+        </div>
+        <div class="col-md-2">
+          <div class="bootstrap-switch-square">
+            <input type="checkbox" data-toggle="switch" id="custom-switch-04" />
+          </div>
+        </div>
+        <div class="col-md-2">
+          <input type="checkbox" checked disabled data-toggle="switch" id="custom-switch-10" />
+        </div>
+        <div class="col-md-2">
+          <div class="bootstrap-switch-square">
+            <input type="checkbox" checked disabled data-toggle="switch" id="custom-switch-11" />
+          </div>
+        </div>
+      </div>
