--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,15 +3,8 @@
 <head>
 	<title>AseanTravel</title>
 	<%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-	<%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+	<%= javascript_include_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
 	<%= csrf_meta_tags %>
-	
-	<link href="assets/vendor/bootstrap.min.css" rel="stylesheet">
-   <link href="assets/flat-ui.css" rel="stylesheet">
-   <link rel="shortcut icon" href="img/favicon.ico">
-   
-   <script src="assets/vendor/video.js"></script>
-	<script src="assets/flat-ui.js"></script>
 </head>
 
 <body>
