--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,9 +36,19 @@
               </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-              <li><a href="../navbar/">Default</a></li>
-              <li class="active"><a href="./">Static top</a></li>
-              <li><a href="../navbar-fixed-top/">Fixed top</a></li>
+              <% if user_signed_in? %>
+                <li class="dropdown">
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown"><strong><%= current_user.email %></strong>. <b class="caret"></b></a>
+                  <ul class="dropdown-menu">
+                    <li><%= link_to 'Edit profile', edit_user_registration_path %> </li>
+                    <li class="divider"></li>
+                    <li><%= link_to "Logout", destroy_user_session_path, method: :delete %> </li>
+                  </ul>
+                </li>
+              <% else %>
+                <li><%= link_to "Sign up", new_user_registration_path %> </li>
+                <li><%= link_to "Login", new_user_session_path %> </li>
+              <% end %>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
