add user full controll

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -14,3 +14,17 @@
  *= stub active_admin
  *= require_self
  */
+
+div.pull-down{
+	margin-top: 10%;
+	margin-bottom: 15%;
+}
+
+.head{
+	text-align: center;
+	padding-bottom: 30px;
+}
+
+a.danger{
+	color: #e74c3c;
+}
