--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
               <span class="sr-only">Toggle navigation</span>
             </button>
-            <a class="navbar-brand" href="#">Flat UI</a>
+            <%= link_to("Asean Travel", root_path , :class => "navbar-brand") %>
           </div>
           <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
