--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -19,6 +19,11 @@ div.pull-down{
 	margin-top: 10%;
 	margin-bottom: 15%;
 }
+.header{
+	.navbar{
+		margin-bottom: 0px !important;
+	}
+}
 
 .head{
 	text-align: center;
@@ -27,4 +32,14 @@ div.pull-down{
 
 a.danger{
 	color: #e74c3c;
+}
+
+.footer{
+	text-align: center;
+	background-color: #4A6681;
+	h2{
+		color: #efefef;
+		margin-top: -2px;
+		margin-bottom: -2px;
+	}
 }
