--- a/app/assets/stylesheets/asean.scss
+++ b/app/assets/stylesheets/asean.scss
@@ -1,8 +1,70 @@
 // Place all the styles related to the Asean controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-.header{
-	a{
-		// text-decoration: none !important;
+
+.dummy1, .dummy2{ text-align: center; }
+.dummy1{
+	background-color: grey;
+}
+
+.dummy2{
+	background-color: #4A6681;
+}
+
+.row.end{
+	margin-bottom: 30px;
+}
+
+.box{
+	border: 1px solid #333;
+	border-radius: 5px;
+}
+
+.carousel{
+	margin-top: 30px;
+	margin-bottom: 30px;
+	.carousel-inner{
+		.item{
+			height: 350px;
+			overflow-y: hidden;
+			img{
+				display: block;
+				width: 100%;
+				margin-left: auto;
+				margin-right: auto;
+			}
+		}
 	}
 }
+
+.caption{
+	h4{
+		font-size: 0.9em;
+	}
+	p{
+		font-size: 0.8em;
+	}
+}
+a.link-flag{
+	width: 100%;
+	margin-bottom: 20px;
+	// :hover{
+		// border: 1px #333 dotted;
+	// }
+
+	img.flag{
+		display: block;
+		margin-left: auto;
+		margin-right: auto;
+		// width: 150px;
+		// height: 75px;
+		// margin-bottom: 10px;
+	}
+}
+
+
+// ----------------------------------------------------------
+
+
+
+
