--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,9 +19,9 @@
           </div>
           <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-              <li class="active"><a href="#">Home</a></li>
-              <li><a href="#about">About</a></li>
-              <li><a href="#contact">Contact</a></li>
+              <%= nav_link 'Home', root_path %>
+              <%= nav_link 'About', about_path %>
+              <%= nav_link 'Contact', contact_path %>
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
                 <ul class="dropdown-menu">
@@ -38,7 +38,7 @@
             <ul class="nav navbar-nav navbar-right">
               <% if user_signed_in? %>
                 <li class="dropdown">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown"><strong><%= current_user.email %></strong>. <b class="caret"></b></a>
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown"><strong><%= current_user.email %></strong><b class="caret"></b></a>
                   <ul class="dropdown-menu">
                     <li><%= link_to 'Edit profile', edit_user_registration_path %> </li>
                     <li class="divider"></li>
@@ -54,17 +54,18 @@
         </div>
       </div>
 	</div>
-<div class="container">
+<!-- <div class="container"> -->
 
 	<div class="row">
-		<div class="col-sm-10 col-sm-offset-1">
+		<div class="col-md-12">
 			<%= yield %>
 		</div>
 	</div>
 
-	<div class="footer" style="width: 100%">
-		<h2>Footer</h2>
-	</div>
+<!-- </div> -->
+
+<div class="footer" style="width: 100%">
+	<h2>Footer</h2>
 </div>
 
 </body>
