fix index countries

--- a/app/assets/stylesheets/asean.scss
+++ b/app/assets/stylesheets/asean.scss
@@ -48,17 +48,12 @@
 a.link-flag{
 	width: 100%;
 	margin-bottom: 20px;
-	// :hover{
-		// border: 1px #333 dotted;
-	// }
 
 	img.flag{
 		display: block;
 		margin-left: auto;
 		margin-right: auto;
-		// width: 150px;
-		// height: 75px;
-		// margin-bottom: 10px;
+		width: 100%;
 	}
 }
 
