--- a/app/assets/stylesheets/asean.scss
+++ b/app/assets/stylesheets/asean.scss
@@ -57,6 +57,15 @@ a.link-flag{
 	}
 }
 
+.card-cover{
+	height: 100px;
+	overflow: hidden;
+	img{
+		display: block;
+		width: 100%;
+	}
+}
+
 
 // ----------------------------------------------------------
 
