--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -54,15 +54,9 @@
         </div>
       </div>
 	</div>
-<!-- <div class="container"> -->
-
-	<div class="row">
-		<div class="col-md-12">
-			<%= yield %>
-		</div>
-	</div>
-
-<!-- </div> -->
+<div class="container-fluid">
+	<%= yield %>
+</div>
 
 <div class="footer" style="width: 100%">
 	<h2>Footer</h2>
