--- a/app/assets/stylesheets/asean.scss
+++ b/app/assets/stylesheets/asean.scss
@@ -47,8 +47,9 @@
 }
 a.link-flag{
 	width: 100%;
-	margin-bottom: 20px;
-
+	margin-bottom: 30px;
+	height: 200px;
+	overflow: hidden;
 	img.flag{
 		display: block;
 		margin-left: auto;
