--- a/app/views/place/show.html.erb
+++ b/app/views/place/show.html.erb
@@ -94,7 +94,7 @@
 
 							<div class="modal fade bs-example-modal-sm-res<%= index %>" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel">
 							  <div class="modal-dialog modal-lg">
-							    <div class="modal-content">
+							    <div class="modal-content sc-modal">
 							    	<div class="row">
 							    		<div class="col-md-6 cover">
 							    			<%= image_tag(r.image.url, :class => "model-card") %>
@@ -121,7 +121,7 @@
 
 							<div class="modal fade bs-example-modal-sm-hol<%= index %>" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel">
 							  <div class="modal-dialog modal-lg">
-							    <div class="modal-content">
+							    <div class="modal-content sc-modal">
 							    	<div class="row">
 							    		<div class="col-md-6 cover">
 							    			<%= image_tag(r.image.url, :class => "model-card") %>
