--- a/app/assets/stylesheets/place.scss
+++ b/app/assets/stylesheets/place.scss
@@ -65,9 +65,11 @@ nav.pagination{
 	h1,h2,h3,h4,h5{ margin-top: 0; }
 }
 
-.modal-content{
+.sc-modal{
 	max-height: 350px;
 	overflow-x: scroll;
+}
+.modal-content{
 	.cover{
 	  line-height: 340px;
 		display: block;
