--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,7 @@
             <ul class="nav navbar-nav navbar-right">
               <% if user_signed_in? %>
                 <li class="dropdown">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown"><strong><%= current_user.email %></strong><b class="caret"></b></a>
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown"><strong><%= current_user.username %></strong><b class="caret"></b></a>
                   <ul class="dropdown-menu">
                     <li><%= link_to 'Edit profile', edit_user_registration_path %> </li>
                     <li class="divider"></li>
