--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -48,7 +48,7 @@
 </div>
 
 <div class="footer" style="width: 100%">
-	<h2>Footer</h2>
+	<h2 style="font-size: 1.5em; padding: 15px;">Copyright © 2015</h2>
 </div>
 
 </body>
