--- a/app/views/country/show.html.erb
+++ b/app/views/country/show.html.erb
@@ -10,7 +10,7 @@
 	</div>
 
 	<div class="col-md-7">
-		<%= @country.description %>
+		<%== @country.description %>
 	</div>
 </div>
 
@@ -31,7 +31,7 @@
 			        </div>
 			        <div class="caption">
 			          <h4><%= p.name %></h4>
-								<%== p.detail %>
+								<p><%== p.detail %></p>
 			        </div>
 			          <%= link_to 'more ...', place_path(p), :class => "btn btn-primary"  %>
 			      </div>
