--- a/app/views/country/show.html.erb
+++ b/app/views/country/show.html.erb
@@ -31,7 +31,7 @@
 			        </div>
 			        <div class="caption">
 			          <h4><%= p.name %></h4>
-								<p><%== p.detail %></p>
+								<p><%= truncate(strip_tags(p.detail), :length => 80) %></p>
 			        </div>
 			          <%= link_to 'more ...', place_path(p), :class => "btn btn-primary"  %>
 			      </div>
