add about & contact

--- a/app/views/asean/about.html.erb
+++ b/app/views/asean/about.html.erb
@@ -1,2 +1,15 @@
-<h1>Asean#about</h1>
-<p>Find me in app/views/asean/about.html.erb</p>
+<div class="row" style="margin-top: 90px;">
+	<div class="col-md-10 col-md-offset-1">
+		<h2><center>About</center></h2>
+		<p><center>
+			Asean Travel guide is website that share a lot informations about the place you might be wanting to go in Asean. We've been gathered important imformation for you to plan your own trip and be ready to go to your destination country.
+		</center></p>
+	</div>
+</div>
+
+<div class="row" style="margin-bottom: 11%;">
+	<div class="col-md-10 col-md-offset-1">
+		<p><center> How this website will help you </center></p>
+		<p><center> If you ever wanted to learn about the general information of the country, the language they speak, what's the weather like, and where to find the hotel, restuarent and souvenirs, you are in the right place! Our website will give you lot of information to plan your trip. </center></p>
+	</div>
+</div>
