--- a/app/views/asean/contact.html.erb
+++ b/app/views/asean/contact.html.erb
@@ -1,2 +1,16 @@
-<h1>Asean#contact</h1>
-<p>Find me in app/views/asean/contact.html.erb</p>
+<div class="row" style="margin-top: 70px; margin-bottom: 20px;">
+	<div class="col-md-10 col-md-offset-1">
+		<h2><center>contact us</center></h2>
+	</div>
+</div>
+
+<div class="row" style="margin-bottom: 11%;">
+	<div class="col-md-10 col-md-offset-1">
+		<p>55 Ngamwongwarn Road Ladyao Sub-District Jatujak District Bangkok 10900</p>
+		<p>e-mail : aseantravel_guide@gmail.com</p>
+		<p>Tel : 02-392-0303</p>
+		<p>Hours</p>
+		<p>Monday to Friday 8am - 9pm</p>
+		<p>Saturday 9.30am - 4pm</p>
+	</div>
+</div>
