--- a/app/views/country/show.html.erb
+++ b/app/views/country/show.html.erb
@@ -33,7 +33,7 @@
 			          <h4><%= p.name %></h4>
 								<p><%= truncate(strip_tags(p.detail), :length => 80) %></p>
 			        </div>
-			          <%= link_to 'more ...', place_path(p), :class => "btn btn-primary"  %>
+			          <%= link_to 'Read more...', place_path(p), :class => "btn btn-primary"  %>
 			      </div>
 			    </div>
 			  <% end %>
