--- a/app/views/asean/index.html.erb
+++ b/app/views/asean/index.html.erb
@@ -65,7 +65,7 @@
                     <p>
                       <%= truncate(strip_tags(p.detail), :length => 80) %>
                     </p>
-                    <%= link_to 'Read more', place_path(p), :class => "btn btn-primary"  %>
+                    <%= link_to 'Read more...', place_path(p), :class => "btn btn-primary"  %>
                   </div>
                 </div>
               </div>
