--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,8 +29,14 @@
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown"><strong><%= current_user.username %></strong><b class="caret"></b></a>
                   <ul class="dropdown-menu">
+
                     <li><%= link_to 'Edit profile', edit_user_registration_path %> </li>
                     <li class="divider"></li>
+
+                    <% if current_user.admin == true %>
+
+                    <% end %>
+
                     <li><%= link_to "Logout", destroy_user_session_path, method: :delete %> </li>
                   </ul>
                 </li>
