--- a/app/views/place/show.html.erb
+++ b/app/views/place/show.html.erb
@@ -82,8 +82,9 @@
 								    			<%= image_tag(s.image.url, :class => "model-card") %>
 								    		</div>
 								    		<div class="col-md-6">
+								    			<h3><%= s.name %></h3>
 								    			<div class="des">
-														<%== s.name %>
+														<%== s.description %>
 								    			</div>
 								    		</div>
 								    	</div>
@@ -93,6 +94,44 @@
 
 			    		</div>
 						<% end %>
+
+						<div class="col-md-3">
+							<%= link_to "Add +", '#', :data => { :toggle => "modal", :target => ".bs-example-modal-sm-sou-add" }, :class => "drop-image" %>
+
+	<div class="modal fade bs-example-modal-sm-sou-add" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel">
+	  <div class="modal-dialog modal-lg">
+	    <div class="modal-content">
+
+		    <div class="modal-header">
+	        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+	        <h4 class="modal-title">New Souvenir</h4>
+	      </div>
+
+	      <div class="modal-body">
+					<%= form_for @sou, :url => place_csp_path(@sou) do |f| %>
+					  <div class="form-group">
+					    <%= f.file_field :image %>
+						</div>
+
+					    <%= f.hidden_field :place_id, :value => @place.id %>
+						<div class="form-group">
+					    <%= f.text_field :name, :placeholder => "Name", :class => "form-control login-field" %>
+						</div>
+
+						<div class="form-group">
+					    <%= f.text_area :description, :placeholder => "Detail", :class => "form-control login-field" %>
+						</div>
+	      </div>
+
+	      <div class="modal-footer">
+	        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+	        <button type="submit" class="btn btn-primary">Create</button>
+					<% end %>
+	      </div>
+	    </div>
+	  </div>
+	</div>
+						</div>
 
 		    	</div>
 		    </div>
@@ -123,6 +162,43 @@
 							</div>
 		    		</div>
 					<% end %>
+					<div class="col-md-3 fix-height">
+							<%= link_to "Add +", '#', :data => { :toggle => "modal", :target => ".bs-example-modal-sm-res-add" }, :class => "drop-image" %>
+
+	<div class="modal fade bs-example-modal-sm-res-add" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel">
+	  <div class="modal-dialog modal-lg">
+	    <div class="modal-content">
+
+		    <div class="modal-header">
+	        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+	        <h4 class="modal-title">New Restaurant</h4>
+	      </div>
+
+	      <div class="modal-body">
+					<%= form_for @res, :url => place_crp_path(@res) do |f| %>
+					  <div class="form-group">
+					    <%= f.file_field :image %>
+						</div>
+
+					    <%= f.hidden_field :place_id, :value => @place.id %>
+						<div class="form-group">
+					    <%= f.text_field :name, :placeholder => "Name", :class => "form-control login-field" %>
+						</div>
+
+						<div class="form-group">
+					    <%= f.text_area :description, :placeholder => "Detail", :class => "form-control login-field" %>
+						</div>
+	      </div>
+
+	      <div class="modal-footer">
+	        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+	        <button type="submit" class="btn btn-primary">Create</button>
+					<% end %>
+	      </div>
+	    </div>
+	  </div>
+	</div>
+						</div>
 		    </div>
 
 		    <div role="tabpanel" class="tab-pane end" id="hotel">
@@ -151,6 +227,44 @@
 							</div>
 		    		</div>
 					<% end %>
+					<div class="col-md-3 fix-height">
+
+<%= link_to "Add +", '#', :data => { :toggle => "modal", :target => ".bs-example-modal-sm-hol-add" }, :class => "drop-image" %>
+
+	<div class="modal fade bs-example-modal-sm-hol-add" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel">
+	  <div class="modal-dialog modal-lg">
+	    <div class="modal-content">
+
+		    <div class="modal-header">
+	        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+	        <h4 class="modal-title">New Hotel</h4>
+	      </div>
+
+	      <div class="modal-body">
+					<%= form_for @hol, :url => place_chp_path(@hol) do |f| %>
+					  <div class="form-group">
+					    <%= f.file_field :image %>
+						</div>
+
+					    <%= f.hidden_field :place_id, :value => @place.id %>
+						<div class="form-group">
+					    <%= f.text_field :name, :placeholder => "Name", :class => "form-control login-field" %>
+						</div>
+
+						<div class="form-group">
+					    <%= f.text_area :description, :placeholder => "Detail", :class => "form-control login-field" %>
+						</div>
+	      </div>
+
+	      <div class="modal-footer">
+	        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+	        <button type="submit" class="btn btn-primary">Create</button>
+					<% end %>
+	      </div>
+	    </div>
+	  </div>
+	</div>
+					</div>
 		    </div>
 
 		  </div>
